feat(core): add Scene

--- a/nx.json
+++ b/nx.json
@@ -51,7 +51,8 @@
     "postprocessing-shader-pass": {
       "tags": ["scope:postprocessing", "type:library", "context:shader-pass"]
     },
-    "core-group": { "tags": ["scope:core", "type:library", "context:group"] }
+    "core-group": { "tags": ["scope:core", "type:library", "context:group"] },
+    "core-scene": { "tags": ["scope:core", "type:library", "context:scene"] }
   },
   "workspaceLayout": { "appsDir": "packages", "libsDir": "packages" }
 }
