--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -43,7 +43,8 @@
       "@angular-three/postprocessing/shader-pass": [
         "packages/postprocessing/shader-pass/src/index.ts"
       ],
-      "@angular-three/core/group": ["packages/core/group/src/index.ts"]
+      "@angular-three/core/group": ["packages/core/group/src/index.ts"],
+      "@angular-three/core/scene": ["packages/core/scene/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
