--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -45,7 +45,10 @@
       ],
       "@angular-three/core/group": ["packages/core/group/src/index.ts"],
       "@angular-three/core/scene": ["packages/core/scene/src/index.ts"],
-      "@angular-three/loaders": ["packages/loaders/src/index.ts"]
+      "@angular-three/loaders": ["packages/loaders/src/index.ts"],
+      "@angular-three/loaders/gltf-loader": [
+        "packages/loaders/gltf-loader/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
