ci: add loders:build to script

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core"],
+          "outputs": [
+            "coverage/packages/core"
+          ],
           "options": {
             "jestConfig": "packages/core/jest.config.js",
             "passWithNoTests": true
@@ -42,7 +44,8 @@
             "commands": [
               "npx ng run core:build",
               "npx ng run postprocessing:build",
-              "npx ng run controls:build"
+              "npx ng run controls:build",
+              "npx ng run loaders:build"
             ],
             "parallel": false
           }
@@ -78,7 +81,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core/typings"],
+          "outputs": [
+            "coverage/packages/core/typings"
+          ],
           "options": {
             "jestConfig": "packages/core/typings/jest.config.js",
             "passWithNoTests": true
@@ -115,7 +120,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core/materials"],
+          "outputs": [
+            "coverage/packages/core/materials"
+          ],
           "options": {
             "jestConfig": "packages/core/materials/jest.config.js",
             "passWithNoTests": true
@@ -152,7 +159,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core/geometries"],
+          "outputs": [
+            "coverage/packages/core/geometries"
+          ],
           "options": {
             "jestConfig": "packages/core/geometries/jest.config.js",
             "passWithNoTests": true
@@ -189,7 +198,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core/meshes"],
+          "outputs": [
+            "coverage/packages/core/meshes"
+          ],
           "options": {
             "jestConfig": "packages/core/meshes/jest.config.js",
             "passWithNoTests": true
@@ -226,7 +237,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core/lights"],
+          "outputs": [
+            "coverage/packages/core/lights"
+          ],
           "options": {
             "jestConfig": "packages/core/lights/jest.config.js",
             "passWithNoTests": true
@@ -263,7 +276,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core/loaders"],
+          "outputs": [
+            "coverage/packages/core/loaders"
+          ],
           "options": {
             "jestConfig": "packages/core/loaders/jest.config.js",
             "passWithNoTests": true
@@ -290,7 +305,9 @@
               "packages/demo/src/favicon.ico",
               "packages/demo/src/assets"
             ],
-            "styles": ["packages/demo/src/styles.scss"],
+            "styles": [
+              "packages/demo/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -380,7 +397,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core/stats"],
+          "outputs": [
+            "coverage/packages/core/stats"
+          ],
           "options": {
             "jestConfig": "packages/core/stats/jest.config.js",
             "passWithNoTests": true
@@ -417,7 +436,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/controls"],
+          "outputs": [
+            "coverage/packages/controls"
+          ],
           "options": {
             "jestConfig": "packages/controls/jest.config.js",
             "passWithNoTests": true
@@ -454,7 +475,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core/attributes"],
+          "outputs": [
+            "coverage/packages/core/attributes"
+          ],
           "options": {
             "jestConfig": "packages/core/attributes/jest.config.js",
             "passWithNoTests": true
@@ -491,7 +514,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/postprocessing"],
+          "outputs": [
+            "coverage/packages/postprocessing"
+          ],
           "options": {
             "jestConfig": "packages/postprocessing/jest.config.js",
             "passWithNoTests": true
@@ -528,7 +553,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/postprocessing/render-pass"],
+          "outputs": [
+            "coverage/packages/postprocessing/render-pass"
+          ],
           "options": {
             "jestConfig": "packages/postprocessing/render-pass/jest.config.js",
             "passWithNoTests": true
@@ -565,7 +592,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core/canvas"],
+          "outputs": [
+            "coverage/packages/core/canvas"
+          ],
           "options": {
             "jestConfig": "packages/core/canvas/jest.config.js",
             "passWithNoTests": true
@@ -602,7 +631,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/postprocessing/ssao-pass"],
+          "outputs": [
+            "coverage/packages/postprocessing/ssao-pass"
+          ],
           "options": {
             "jestConfig": "packages/postprocessing/ssao-pass/jest.config.js",
             "passWithNoTests": true
@@ -639,7 +670,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/postprocessing/unreal-bloom-pass"],
+          "outputs": [
+            "coverage/packages/postprocessing/unreal-bloom-pass"
+          ],
           "options": {
             "jestConfig": "packages/postprocessing/unreal-bloom-pass/jest.config.js",
             "passWithNoTests": true
@@ -676,7 +709,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/postprocessing/shader-pass"],
+          "outputs": [
+            "coverage/packages/postprocessing/shader-pass"
+          ],
           "options": {
             "jestConfig": "packages/postprocessing/shader-pass/jest.config.js",
             "passWithNoTests": true
@@ -713,7 +748,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core/group"],
+          "outputs": [
+            "coverage/packages/core/group"
+          ],
           "options": {
             "jestConfig": "packages/core/group/jest.config.js",
             "passWithNoTests": true
@@ -750,7 +787,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/core/scene"],
+          "outputs": [
+            "coverage/packages/core/scene"
+          ],
           "options": {
             "jestConfig": "packages/core/scene/jest.config.js",
             "passWithNoTests": true
@@ -787,7 +826,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/loaders"],
+          "outputs": [
+            "coverage/packages/loaders"
+          ],
           "options": {
             "jestConfig": "packages/loaders/jest.config.js",
             "passWithNoTests": true
@@ -824,7 +865,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/packages/loaders/gltf-loader"],
+          "outputs": [
+            "coverage/packages/loaders/gltf-loader"
+          ],
           "options": {
             "jestConfig": "packages/loaders/gltf-loader/jest.config.js",
             "passWithNoTests": true
