--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "angular-three",
   "version": "0.0.0",
   "license": "MIT",
+  "author": {
+    "name": "Chau Tran",
+    "email": "nartc7789@gmail.com",
+    "url": "https://nartc.me"
+  },
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
@@ -16,16 +21,19 @@
     "affected:build": "nx affected:build",
     "affected:e2e": "nx affected:e2e",
     "affected:test": "nx affected:test",
-    "affected:lint": "nx affected:lint",
+    "affected:lint": "nx affected:lint --base=main",
     "affected:dep-graph": "nx affected:dep-graph",
     "affected": "nx affected",
     "format": "nx format:write",
-    "format:write": "nx format:write",
+    "format:write": "nx format:write --base=main",
     "format:check": "nx format:check",
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "commit": "cz",
+    "release": "release-it",
+    "build:all": "ng run core:build-all"
   },
   "private": true,
   "dependencies": {
@@ -59,20 +67,41 @@
     "@nrwl/linter": "12.0.6",
     "@nrwl/tao": "12.0.6",
     "@nrwl/workspace": "12.0.6",
+    "@release-it/bumper": "2.0.0",
+    "@release-it/conventional-changelog": "2.0.1",
     "@types/jest": "26.0.22",
     "@types/node": "14.14.41",
     "@types/three": "0.127.1",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
+    "commitizen": "4.2.3",
+    "cz-conventional-changelog": "^3.3.0",
     "dotenv": "8.2.0",
     "eslint": "7.24.0",
     "eslint-config-prettier": "8.2.0",
     "jest": "26.6.3",
     "jest-preset-angular": "8.4.0",
+    "lint-staged": "10.5.4",
     "ng-packagr": "11.2.4",
     "prettier": "2.2.1",
+    "release-it": "14.6.1",
+    "simple-git-hooks": "2.3.1",
     "ts-jest": "26.5.5",
     "ts-node": "9.1.1",
     "typescript": "4.1.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,json,ts}": [
+      "npm run affected:lint",
+      "npm run format:write"
+    ]
   }
 }
