--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,11 +21,11 @@
   ],
   "peerDependencies": {
     "@angular/common": "~11.2.10",
-    "@angular/core": "~11.2.10"
+    "@angular/core": "~11.2.10",
+    "@ngrx/component-store": "~11.1.0",
+    "three": "~0.127.0"
   },
   "dependencies": {
-    "@ngrx/component-store": "~11.1.0",
-    "three": "~0.127.0",
     "tslib": "^2.0.0"
   }
 }
