--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-three",
-  "version": "0.0.0",
+  "version": "1.0.0-beta.0",
   "license": "MIT",
   "author": {
     "name": "Chau Tran",
