--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-three/core",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.0",
   "author": {
     "name": "Chau Tran",
     "email": "nartc7789@gmail.com",
