--- a/packages/loaders/package.json
+++ b/packages/loaders/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-three/loaders",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.0",
   "peerDependencies": {
     "@angular/common": "^11.2.10",
     "@angular/core": "^11.2.10"
