--- a/angular.json
+++ b/angular.json
@@ -42,10 +42,10 @@
           "builder": "@nrwl/workspace:run-commands",
           "options": {
             "commands": [
-              "npx ng run core:build",
-              "npx ng run postprocessing:build",
-              "npx ng run controls:build",
-              "npx ng run loaders:build"
+              "npx ng run core:build --prod",
+              "npx ng run postprocessing:build --prod",
+              "npx ng run controls:build --prod",
+              "npx ng run loaders:build --prod"
             ],
             "parallel": false
           }
