--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -48,7 +48,8 @@
       "@angular-three/loaders/gltf-loader": [
         "packages/loaders/gltf-loader/src/index.ts"
       ],
-      "@angular-three/core/audios": ["packages/core/audios/src/index.ts"]
+      "@angular-three/core/audios": ["packages/core/audios/src/index.ts"],
+      "@angular-three/core/sprites": ["packages/core/sprites/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
