--- a/nx.json
+++ b/nx.json
@@ -58,7 +58,8 @@
     "core-sprites": {
       "tags": ["scope:core", "type:library", "context:sprites"]
     },
-    "core-lod": { "tags": ["scope:core", "type:library", "context:lod"] }
+    "core-lod": { "tags": ["scope:core", "type:library", "context:lod"] },
+    "core-lines": { "tags": ["scope:core", "type:library", "context:lines"] }
   },
   "workspaceLayout": { "appsDir": "packages", "libsDir": "packages" }
 }
