--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -51,7 +51,8 @@
       "@angular-three/core/audios": ["packages/core/audios/src/index.ts"],
       "@angular-three/core/sprites": ["packages/core/sprites/src/index.ts"],
       "@angular-three/core/lod": ["packages/core/lod/src/index.ts"],
-      "@angular-three/core/lines": ["packages/core/lines/src/index.ts"]
+      "@angular-three/core/lines": ["packages/core/lines/src/index.ts"],
+      "@angular-three/core/points": ["packages/core/points/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
