feat(core): add SphereBufferGeometry and fix lints

--- a/packages/core/geometries/.eslintrc.json
+++ b/packages/core/geometries/.eslintrc.json
@@ -12,13 +12,13 @@
         "project": ["packages/core/geometries/tsconfig.*?.json"]
       },
       "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          { "type": "attribute", "prefix": "ngt", "style": "camelCase" }
-        ],
         "@angular-eslint/component-selector": [
           "error",
-          { "type": "element", "prefix": "ngt", "style": "kebab-case" }
+          {
+            "type": "element",
+            "prefix": "ngt",
+            "style": "kebab-case"
+          }
         ]
       }
     },
